--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb+srv://esraasyam15:aVRE8MZbqM3gFMff@cluster0.5ga5rnp.mongodb.net/URL_Shorter
+mongodb+srv://esraasyam15:aVRE8MZbqM3gFMff@cluster0.5ga5rnp.mongodb.net/
