--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-mongodb+srv://esraasyam15:aVRE8MZbqM3gFMff@cluster0.5ga5rnp.mongodb.net/
+port = 3000
+MONGODB_URL = mongodb+srv://esraasyam15:aVRE8MZbqM3gFMff@cluster0.5ga5rnp.mongodb.net/URL_Shorter
